--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
   </head>
   <body class="bg-light">
     <div class="container mt-5 text-center">
-      <h2>Welcome to Flask Auth</h2>
+      <h2>Infinite Analytics BE Project</h2>
       <a href="{{ url_for('signup') }}" class="btn btn-primary mt-3">Sign Up</a>
       <a href="{{ url_for('login') }}" class="btn btn-success mt-3">Login</a>
     </div>
